# papilon

./: .gitignore  LICENSE  NOTICE  Papilon_Marketing_Optimization_Workflow.ipynb  README.md  SECURITY.md  pyproject.toml  setup.cfg
papilon/: __init__.py  causal.py  energy.py  entropy.py  optimizer.py  relationships.py  simulation.py  states.py  topology.py
papilon.egg-info/: PKG-INFO  SOURCES.txt
papilon_examples/: Analyzing_Digital_Exhaust_with_Papilon.ipynb  Analyzing_Government_Spending_with_Papilon.ipynb  Papilon_NFL_Contracts_Analysis.ipynb  basic_simulation.ipynb  causal_discovery.ipynb  marketing_walkthrough.ipynb  optimization_demo.ipynb
